--- a/css/portal.css
+++ b/css/portal.css
@@ -381,6 +381,13 @@ h1.portal_title {
 #portal-nav .navbar-form #search-btn-2:hover {
   background: #f1f1f1;
 }
+.trending,
+.headline {
+  position: relative;
+  padding: 5px 5px;
+  border-bottom: 1px solid #b9babc;
+  overflow: hidden;
+}
 .portal-articles .trending header h2 {
   font-size: 17px;
   line-height: 20px;
@@ -464,7 +471,7 @@ a.callout h3 i.fa.orange {
   color: #ffffff;
 }
 h1.page_title {
-  text-align: center;
+  text-align: left;
 }
 h1.page_title small {
   text-align: left;
@@ -477,12 +484,11 @@ ul.nav.navbar-nav li a {
   margin-left: auto;
   width: 450px;
 }
-#sidebar-content {
-  margin-bottom: 0;
-  padding-bottom: 400px;
-}
 #sidebar-content h2.subhead.secondary {
   margin: 0;
+}
+a.view-all-breaking-news {
+  margin: 50px;
 }
 @media (min-width: 768px) {
   #navigation-minimal .navbar.navbar-inverse .nav-pills > li > a {
@@ -533,6 +539,12 @@ ul.nav.navbar-nav li a {
   }
   .portal-articles .trending {
     margin: 0 0 25px;
+    border-bottom: none;
+  }
+  .headline {
+    border-bottom: none;
+    padding: 0;
+    margin: 0;
   }
   .newsletter {
     background: transparent url('http://www.eurekalert.org/img/newsletter-bg-tablet.jpg') center center no-repeat;
