--- a/less/responsive.less
+++ b/less/responsive.less
@@ -393,11 +393,11 @@
     }
   }
 	
-/*-----Portal "headline" Trending 4/21/16-----*/
+/*-----Portal "headline" Trending 4/25/16-----*/
 	
 	.portal-articles{
     .headline {
-      margin: 0 0 25px;
+//      margin: 0 0 25px;
     }
   }
 /*-----End Portal "headline" Trending 4/21/16-----*/
